implemented code to support adding accounts restfully in a streaming manner